# dora

./: CMakeLists.txt  README.md  main.cpp  todo.txt
model/: class.cpp  class.h  model.cpp  model.h  sample.cpp  sample.h
samples/: README.md  results.txt
samples/cards/suits/: dictionary.yml  suits.yml
tools/: binarization.cpp  binarization.h  document.cpp  document.h  helper.cpp  helper.h  transforms.cpp  transforms.h  xycut.cpp  xycut.h
